--- a/hts-cache/winprofile.ini
+++ b/hts-cache/winprofile.ini
@@ -73,6 +73,6 @@ MIMEDefsMime5=
 MIMEDefsMime6=
 MIMEDefsMime7=
 MIMEDefsMime8=
-CurrentUrl=http://Mechzilla Technologies.com%0d%0a
+CurrentUrl=http://equinoxsdrones.com%0d%0a
 CurrentAction=0
 CurrentURLList=
